# IngameIME-Common

./: .clang-format  .cmake-format  .gitmodules  CMakeLists.txt  IngameIME.cmake  README.html  README.md  run-format.py
docs/: ClassDiagram.md  ClassDiagram.mmd
include/: Composition.hpp  ICallbackHolder.hpp  IngameIME.hpp  InputContext.hpp  InputProcessor.hpp
include/ingameime-common/: Composition.hpp  IngameIME.hpp  InputProcessor.hpp
src/: IngameIME.cpp  IngameIME.i  std_function.i
src/include/: Composition.hpp  Composotion.hpp  ICallback.hpp  ICallbackHolder.hpp  IngameIME.hpp  IngameIME.i  InputContext.hpp  InputProcessor.hpp
testWnd/: .clang-format  .gitmodules  CMakeLists.txt  Readme.md
testWnd/builder/: MSVC_bin2obj.cpp  ResourceBuilder.cpp  bin2c.c  bin2c.cpp
testWnd/ctest/: T_Unicode.cpp
testWnd/embed/shader/: VertexShader.txt
testWnd/glad/: CMakeLists.txt
testWnd/glad/include/glad/: glad.h
testWnd/glad/src/: glad.c
testWnd/include/: IMRenderer.hpp  IngameIMEImpl.hpp  Main.hpp  Render.hpp  Resource.hpp  cmdline.hpp
testWnd/nuklear/: CMakeLists.txt
testWnd/nuklear/include/: nuklear.h
testWnd/src/: IngameIMEImpl.cpp  Render.cpp  Resource.cpp  main.cpp
